Handle event for input

--- a/package.json
+++ b/package.json
@@ -165,6 +165,7 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "bignumber.js": "^9.0.1",
     "@cyntler/react-doc-viewer": "^1.14.1",
     "@date-io/dayjs": "1.x",
     "@material-ui/core": "^4.12.3",
