--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/testing-library__cypress": "^5.0.5",
     "@types/ua-parser-js": "^0.7.35",
     "@types/wcag-contrast": "^3.0.0",
+    "@types/numeral": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "@uniswap/liquidity-staker": "^1.0.2",
@@ -200,6 +201,7 @@
     "use-draggable-scroll": "^0.1.0",
     "viem": "^2.21.54",
     "wagmi": "^2.13.4",
-    "web3": "^4.5.0"
+    "web3": "^4.5.0",
+    "numeral": "^2.0.4"
   }
 }
