--- a/.env.development
+++ b/.env.development
@@ -28,3 +28,4 @@ REACT_APP_BRIDGE_ADMIN_URL=https://staging-bridge-admin.ixs.finance
 REACT_APP_STAKING_URL=https://staking.ixs.finance
 REACT_APP_JUMPTASK_SECURITY_TOKENS=69177dda8b86166a439d30b9bdbb7331
 REACT_APP_DEFAULT_CHAIN_ID=84532
+REACT_APP_SWAP_COST=100000
