--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "@balancer-labs/typechain": "^1.0.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@balancer-labs/typechain": "^1.0.0",
+    "@ethersproject/experimental": "^5.2.0",
     "@ixswap1/default-token-list": "^1.5.6",
     "@ixswap1/sdk-core": "^1.3.7",
     "@ixswap1/v2-core": "^1.0.11",
@@ -57,7 +58,6 @@
     "@types/testing-library__cypress": "^5.0.5",
     "@types/ua-parser-js": "^0.7.35",
     "@types/wcag-contrast": "^3.0.0",
-    "@types/numeral": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "@uniswap/liquidity-staker": "^1.0.2",
@@ -126,7 +126,7 @@
     "stream-http": "^3.2.0",
     "styled-components": "^5.0.0",
     "styled-system": "^5.1.5",
-    "typechain": "^5.0.0",
+    "typechain": "^8.1.1",
     "typescript": "^4.2.3",
     "ua-parser-js": "^0.7.28",
     "url": "^0.11.1",
@@ -167,9 +167,9 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "bignumber.js": "^9.0.1",
     "@cyntler/react-doc-viewer": "^1.14.1",
     "@date-io/dayjs": "1.x",
+    "@ixswap1/dex-v2-sdk": "^1.2.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/pickers": "4.0.0-alpha.12",
     "@metamask/detect-provider": "^2.0.0",
@@ -181,6 +181,7 @@
     "@tanstack/react-query": "^5.51.23",
     "async-wait-until": "^2.0.7",
     "big.js": "^6.2.1",
+    "bignumber.js": "^9.0.1",
     "concurrently": "^6.2.0",
     "eth-provider": "^0.7.0",
     "ethereum-block-by-date": "^1.5.0",
@@ -202,7 +203,6 @@
     "use-draggable-scroll": "^0.1.0",
     "viem": "^2.21.54",
     "wagmi": "^2.13.4",
-    "web3": "^4.5.0",
-    "numeral": "^2.0.4"
+    "web3": "^4.5.0"
   }
 }
