Update walletConnectConfig for v2

--- a/src/walletConnectConfig.json
+++ b/src/walletConnectConfig.json
@@ -13,5 +13,6 @@
   "1assetexchange.ixswap.io": "e4f3e7543a09c8ada80739199092c3b8",
   "dev.ixs.finance": "e5553e04ad578958dbe66842a6b66c05",
   "staging.ixs.finance": "e5553e04ad578958dbe66842a6b66c05",
-  "app.ixs.finance": "e5553e04ad578958dbe66842a6b66c05"
+  "app.ixs.finance": "e5553e04ad578958dbe66842a6b66c05",
+  "v2.ixswap.io": "403471c04160eaad4d711c014cd4e2e5"
 }
