--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "formik": "^2.2.9",
     "https-browserify": "^1.0.0",
     "inter-ui": "^3.13.1",
+    "json-to-graphql-query": "^2.0.0",
     "lightweight-charts": "^3.3.0",
     "lodash.flatmap": "^4.5.0",
     "lodash.keys": "^4.2.0",
@@ -179,6 +180,7 @@
     "@sentry/cli": "^2.25.0",
     "@sentry/react": "^7.93.0",
     "@tanstack/react-query": "^5.51.23",
+    "@tomfrench/ens-avatar-resolver": "^0.1.2",
     "async-wait-until": "^2.0.7",
     "big.js": "^6.2.1",
     "bignumber.js": "^9.0.1",
@@ -192,6 +194,7 @@
     "react-cookie": "^4.1.1",
     "react-csv": "^2.2.2",
     "react-helmet": "^6.1.0",
+    "react-jazzicon": "^1.0.4",
     "react-lazy-load-image-component": "^1.5.1",
     "react-phone-input-2": "^2.15.0",
     "react-select": "^5.2.2",
