--- a/package.json
+++ b/package.json
@@ -184,6 +184,7 @@
     "async-wait-until": "^2.0.7",
     "big.js": "^6.2.1",
     "bignumber.js": "^9.0.1",
+    "color.js": "^1.2.0",
     "concurrently": "^6.2.0",
     "eth-provider": "^0.7.0",
     "ethereum-block-by-date": "^1.5.0",
