Add logic useToken

--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "concurrently": "^6.2.0",
     "eth-provider": "^0.7.0",
     "ethereum-block-by-date": "^1.5.0",
+    "graphql-tag": "^2.11.0",
     "heic2any": "^0.0.4",
     "moment": "^2.29.1",
     "mui-color-input": "^3.0.0",
