--- a/package.json
+++ b/package.json
@@ -181,11 +181,13 @@
     "@sentry/react": "^7.93.0",
     "@tanstack/react-query": "^5.51.23",
     "@tomfrench/ens-avatar-resolver": "^0.1.2",
+    "@types/debounce-promise": "^3.1.6",
     "async-wait-until": "^2.0.7",
     "big.js": "^6.2.1",
     "bignumber.js": "^9.0.1",
     "color.js": "^1.2.0",
     "concurrently": "^6.2.0",
+    "debounce-promise": "^3.1.2",
     "eth-provider": "^0.7.0",
     "ethereum-block-by-date": "^1.5.0",
     "graphql-tag": "^2.11.0",
