--- a/package.json
+++ b/package.json
@@ -170,6 +170,7 @@
   "dependencies": {
     "@cyntler/react-doc-viewer": "^1.14.1",
     "@date-io/dayjs": "1.x",
+    "@gnosis.pm/safe-apps-sdk": "^7.8.0",
     "@ixswap1/dex-v2-sdk": "^1.2.6",
     "@material-ui/core": "^4.12.3",
     "@material-ui/pickers": "4.0.0-alpha.12",
