--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,6 @@
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/ban-ts-ignore": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "react-hooks/exhaustive-deps":"off",
+    "react-hooks/exhaustive-deps":"off"
   }
 }
