--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@typechain/ethers-v5": "^7.0.0",
     "@types/big.js": "^6.2.2",
     "@types/country-list": "^2.1.0",
+    "@types/echarts": "4.9.2",
     "@types/jest": "^25.2.1",
     "@types/lingui__core": "^2.7.1",
     "@types/lingui__macro": "^2.7.4",
@@ -189,6 +190,8 @@
     "color.js": "^1.2.0",
     "concurrently": "^6.2.0",
     "debounce-promise": "^3.1.2",
+    "echarts": "5.6.0",
+    "echarts-for-react": "3.0.2",
     "eth-provider": "^0.7.0",
     "ethereum-block-by-date": "^1.5.0",
     "graphql-tag": "^2.11.0",
