--- a/.env.development
+++ b/.env.development
@@ -20,7 +20,7 @@ REACT_APP_WALLET_CONNECT_PROJECT_ID=fd50d8c55e847566ce7e873ba898467e
 ESLINT_NO_DEV_ERRORS=true
 DISABLE_ESLINT_PLUGIN=true
 REACT_APP_SENTRY_DNS=""
-REACT_APP_TELEGRAM_VERIFICATION_BOT='Letsgo1234_bot'
+REACT_APP_TELEGRAM_VERIFICATION_BOT='ixs_dev_kyc_tele_bot'
 REACT_APP_ENV=development
 REACT_APP_ALCHEMY_KEY="r6GxzZtusoypG9eNhpC41xNNzd5-V0ZJ"
 REACT_APP_BRIDGE_URL=https://staging-bridge.ixs.finance
