--- a/package.json
+++ b/package.json
@@ -184,6 +184,7 @@
     "moment": "^2.29.1",
     "mui-color-input": "^3.0.0",
     "numeral": "^2.0.6",
+    "papaparse": "^5.5.2",
     "react-cookie": "^4.1.1",
     "react-csv": "^2.2.2",
     "react-helmet": "^6.1.0",
