--- a/amplify.yml
+++ b/amplify.yml
@@ -14,7 +14,7 @@ frontend:
         # Fetch NPM_TOKEN from SSM and export it
         - echo "Fetching NPM_TOKEN from SSM Parameter Store"
         - export NPM_TOKEN=$(aws ssm get-parameter \
-            --name /amplify/NPM_TOKEN \
+            --name ${SSM_KEY_NPM_TOKEN} \
             --with-decryption \
             --query Parameter.Value \
             --output text)
