--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 REACT_APP_INFURA_KEY="7f00ea5349e64a078e7a9533c9126cef"
 REACT_APP_INFURA_NETWORK_SUBDOMAIN='polygon-mumbai'
 REACT_APP_PRODUCTION_APP_URL=app.ixs.finance
-REACT_APP_API_URL=https://api-dev.ixs.finance/v1/
+REACT_APP_API_URL=https://api.dev.ixswap.io/v1/
 REACT_APP_API_URL_LOCAL=http://localhost:8080/v1/
 REACT_APP_USE_LOCAL_BACKEND=false
 SKIP_PREFLIGHT_CHECK=true
@@ -20,7 +20,7 @@ REACT_APP_WALLET_CONNECT_PROJECT_ID=fd50d8c55e847566ce7e873ba898467e
 ESLINT_NO_DEV_ERRORS=true
 DISABLE_ESLINT_PLUGIN=true
 REACT_APP_SENTRY_DNS=""
-REACT_APP_TELEGRAM_VERIFICATION_BOT='ixs_dev_kyc_tele_bot'
+REACT_APP_TELEGRAM_VERIFICATION_BOT='Letsgo1234_bot'
 REACT_APP_ENV=development
 REACT_APP_ALCHEMY_KEY="r6GxzZtusoypG9eNhpC41xNNzd5-V0ZJ"
 REACT_APP_BRIDGE_URL=https://staging-bridge.ixs.finance
