--- a/.env.staging
+++ b/.env.staging
@@ -1,5 +1,5 @@
 REACT_APP_PRODUCTION_APP_URL=app.ixs.finance
-REACT_APP_API_URL=https://api-stg.ixs.finance/v1/
+REACT_APP_API_URL=https://api.staging.ixswap.io/v1/
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_INFURA_KEY="7f00ea5349e64a078e7a9533c9126cef"
 REACT_APP_INFURA_NETWORK_SUBDOMAIN='polygon-mumbai'
@@ -16,7 +16,7 @@ REACT_APP_WALLET_CONNECT_PROJECT_ID=8aa7120a67d53c7616b70680cfd95776
 ESLINT_NO_DEV_ERRORS=true
 DISABLE_ESLINT_PLUGIN=true
 REACT_APP_SENTRY_DNS="https://54ffd16301c7c80d62fcbf68f3f8d0d0@o4506556391096320.ingest.us.sentry.io/4508158644846592"
-REACT_APP_TELEGRAM_VERIFICATION_BOT='ixs_stg_kyc_tele_bot'
+REACT_APP_TELEGRAM_VERIFICATION_BOT='ixs_sav_bot'
 REACT_APP_ENV=staging
 REACT_APP_ALCHEMY_KEY="r6GxzZtusoypG9eNhpC41xNNzd5-V0ZJ"
 REACT_APP_BRIDGE_URL=https://staging-bridge.ixs.finance
