--- a/src/walletConnectConfig.json
+++ b/src/walletConnectConfig.json
@@ -12,6 +12,6 @@
   "1assetexchange-dev.ixswap.io": "2bb47aa208fcb948fd9eedc19c205a9b",
   "1assetexchange.ixswap.io": "e4f3e7543a09c8ada80739199092c3b8",
   "dev.ixs.finance": "e5553e04ad578958dbe66842a6b66c05",
-  "stg.ixs.finance": "e5553e04ad578958dbe66842a6b66c05",
+  "staging.ixs.finance": "e5553e04ad578958dbe66842a6b66c05",
   "app.ixs.finance": "e5553e04ad578958dbe66842a6b66c05"
 }
