--- a/.env.staging-client-demo
+++ b/.env.staging-client-demo
@@ -1,5 +1,5 @@
 REACT_APP_PRODUCTION_APP_URL=app.ixs.finance
-REACT_APP_API_URL=https://api.staging.ixswap.io/v1/
+REACT_APP_API_URL=https://api.staging.ixs.finance/v1/
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_INFURA_KEY="7f00ea5349e64a078e7a9533c9126cef"
 REACT_APP_INFURA_NETWORK_SUBDOMAIN='polygon-mumbai'
