--- a/src/walletConnectConfig.json
+++ b/src/walletConnectConfig.json
@@ -14,5 +14,6 @@
   "dev.ixs.finance": "e5553e04ad578958dbe66842a6b66c05",
   "stg.ixs.finance": "e5553e04ad578958dbe66842a6b66c05",
   "app.ixs.finance": "e5553e04ad578958dbe66842a6b66c05",
-  "v2.ixswap.io": "403471c04160eaad4d711c014cd4e2e5"
+  "v2.ixswap.io": "403471c04160eaad4d711c014cd4e2e5",
+  "v2.ixs.finance": "403471c04160eaad4d711c014cd4e2e5"
 }
