--- a/package.json
+++ b/package.json
@@ -177,6 +177,7 @@
     "@tanstack/react-query": "^5.51.23",
     "async-wait-until": "^2.0.7",
     "big.js": "^6.2.1",
+    "bignumber.js": "^9.0.1",
     "concurrently": "^6.2.0",
     "eth-provider": "^0.7.0",
     "ethereum-block-by-date": "^1.5.0",
