--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@uniswap/token-lists": "^1.0.0-beta.19",
     "ajv": "^6.12.3",
     "assert": "^2.0.0",
+    "autoprefixer": "^10.4.21",
     "babel-loader": "8.1.0",
     "babel-plugin-styled-components": "^2.1.4",
     "buffer": "^6.0.3",
@@ -94,6 +95,7 @@
     "node-vibrant": "^3.1.5",
     "os-browserify": "^0.3.0",
     "polished": "^3.3.2",
+    "postcss": "^8.5.6",
     "prettier": "^2.2.1",
     "process": "^0.11.10",
     "qs": "^6.9.4",
@@ -124,6 +126,7 @@
     "stream-http": "^3.2.0",
     "styled-components": "^5.0.0",
     "styled-system": "^5.1.5",
+    "tailwindcss": "^4.1.11",
     "typechain": "^5.0.0",
     "typescript": "^4.2.3",
     "ua-parser-js": "^0.7.28",
@@ -178,6 +181,7 @@
     "async-wait-until": "^2.0.7",
     "big.js": "^6.2.1",
     "bignumber.js": "^9.0.1",
+    "clsx": "^2.1.1",
     "concurrently": "^6.2.0",
     "eth-provider": "^0.7.0",
     "ethereum-block-by-date": "^1.5.0",
